--- a/recipecard.html
+++ b/recipecard.html
@@ -51,10 +51,10 @@
         </div>
 
         <!-- Login and Sign Up Buttons: Links to the login and registration pages -->
-        <a href="index.html" class="buttons">
-            <button class="btn">Log In</button>
-            <button class="btn btn-primary">Sign Up</button>
-        </a>
+        <div class="buttons">
+            <a href="index.html" class="btn">Log In</a>
+            <a href="index.html" class="btn btn-primary">Sign Up</a>
+        </div>
     </header>
 
     <!-- Navigation Menu: Contains links to different sections of the website -->
