--- a/recipecard.html
+++ b/recipecard.html
@@ -358,7 +358,8 @@
         }
     </script>
     <script src="nav.js">
-        //Links to JavaScript files in the navigation bar</script>
+        //Links to JavaScript files in the navigation bar
+    </script>
 </body>
 
 </html>
