--- a/home.html
+++ b/home.html
@@ -290,7 +290,8 @@
         });
     </script>
     <script src="nav.js">
-        //Links to JavaScript files in the navigation bar</script>
+        //Links to JavaScript files in the navigation bar
+    </script>
 
 </body>
 
